Reverted most changes because of render

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Akjo03 Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/akjo03/javautils</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>io.github.akjo03.util</groupId>
