Added deploy to version to create new deployment

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.akjo03.discord</groupId>
     <artifactId>acsp-bot</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.0-deploy</version>
     <packaging>jar</packaging>
 
     <name>ACSP-Bot</name>
