--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.akjo03.lib</groupId>
-            <artifactId>AkjoLib</artifactId>
+            <artifactId>akjolib</artifactId>
             <version>1.0.0</version>
         </dependency>
 
