--- a/data/bot_config.json
+++ b/data/bot_config.json
@@ -522,10 +522,11 @@
 			"language": "GERMAN",
 			"value": "Meintest du `€0`? "
 		},
+
 		{
 			"label": "ERROR_TITLE_UNKNOWN",
 			"language": "ENGLISH",
-			"value": "Unknown Error"
+			"value": "Unknown error"
 		},
 		{
 			"label": "ERROR_TITLE_UNKNOWN",
@@ -542,10 +543,11 @@
 			"language": "GERMAN",
 			"value": "Ein unbekannter Fehler ist aufgetreten."
 		},
+
 		{
 			"label": "ERROR_TITLE_UNKNOWN_COMMAND",
 			"language": "ENGLISH",
-			"value": "Unknown Command"
+			"value": "Unknown command"
 		},
 		{
 			"label": "ERROR_TITLE_UNKNOWN_COMMAND",
@@ -562,10 +564,11 @@
 			"language": "GERMAN",
 			"value": "Der Befehl `€0` existiert nicht. €1Nutze `!list` um eine Liste aller Befehle zu erhalten."
 		},
+
 		{
 			"label": "ERROR_TITLE_COMMAND_UNAVAILABLE",
 			"language": "ENGLISH",
-			"value": "Command Unavailable"
+			"value": "Command unavailable"
 		},
 		{
 			"label": "ERROR_TITLE_COMMAND_UNAVAILABLE",
@@ -582,10 +585,11 @@
 			"language": "GERMAN",
 			"value": "Der Befehl `€0` ist derzeit nicht verfügbar."
 		},
+
 		{
 			"label": "ERROR_TITLE_COMMAND_MISSING_PERMISSIONS",
 			"language": "ENGLISH",
-			"value": "Missing Permissions"
+			"value": "Missing permissions"
 		},
 		{
 			"label": "ERROR_TITLE_COMMAND_MISSING_PERMISSIONS",
@@ -602,10 +606,11 @@
 			"language": "GERMAN",
 			"value": "Du hast nicht die erforderlichen Berechtigungen, um den Befehl `€0` auszuführen."
 		},
+
 		{
 			"label": "ERROR_TITLE_SUBCOMMAND_REQUIRED",
 			"language": "ENGLISH",
-			"value": "Subcommand Required"
+			"value": "Subcommand required"
 		},
 		{
 			"label": "ERROR_TITLE_SUBCOMMAND_REQUIRED",
@@ -622,10 +627,11 @@
 			"language": "GERMAN",
 			"value": "Der Befehl `€0` benötigt einen Unterbefehl. Nutze `!help command €0` um eine Liste aller Unterbefehle zu erhalten."
 		},
+
 		{
 			"label": "ERROR_TITLE_SUBCOMMAND_UNKNOWN",
 			"language": "ENGLISH",
-			"value": "Unknown Subcommand"
+			"value": "Unknown subcommand"
 		},
 		{
 			"label": "ERROR_TITLE_SUBCOMMAND_UNKNOWN",
@@ -642,10 +648,11 @@
 			"language": "GERMAN",
 			"value": "Der Unterbefehl `€0` existiert nicht für den Befehl `€1`. €2Nutze `!help command €1` um eine Liste aller Unterbefehle zu erhalten."
 		},
+
 		{
 			"label": "ERROR_TITLE_SUBCOMMAND_UNAVAILABLE",
 			"language": "ENGLISH",
-			"value": "Subcommand Unavailable"
+			"value": "Subcommand unavailable"
 		},
 		{
 			"label": "ERROR_TITLE_SUBCOMMAND_UNAVAILABLE",
@@ -662,10 +669,11 @@
 			"language": "GERMAN",
 			"value": "Der Unterbefehl `€0` für den Befehl `€1` ist derzeit nicht verfügbar."
 		},
+
 		{
 			"label": "ERROR_TITLE_SUBCOMMAND_MISSING_PERMISSIONS",
 			"language": "ENGLISH",
-			"value": "Missing Permissions"
+			"value": "Missing permissions"
 		},
 		{
 			"label": "ERROR_TITLE_SUBCOMMAND_MISSING_PERMISSIONS",
@@ -682,6 +690,238 @@
 			"language": "GERMAN",
 			"value": "Du hast nicht die erforderlichen Berechtigungen, um den Unterbefehl `€0` für den Befehl `€1` auszuführen."
 		},
+
+		{
+			"label": "ERROR_TITLE_COMMAND_ARGUMENTS_INVALID_ORDER",
+			"language": "ENGLISH",
+			"value": "Invalid argument order"
+		},
+		{
+			"label": "ERROR_TITLE_COMMAND_ARGUMENTS_INVALID_ORDER",
+			"language": "GERMAN",
+			"value": "Ungültige Argumentenreihenfolge"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_ARGUMENTS_INVALID_ORDER",
+			"language": "ENGLISH",
+			"value": "Arguments given as a key-value pair must either be given exclusively or at the end of each argument list."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_ARGUMENTS_INVALID_ORDER",
+			"language": "GERMAN",
+			"value": "Argumente, die als Schlüssel-Wert-Paar übergeben werden, müssen entweder ausschließlich oder am Ende jeder Argumentliste übergeben werden."
+		},
+
+		{
+			"label": "ERROR_TITLE_COMMAND_ARGUMENTS_TOO_MANY",
+			"language": "ENGLISH",
+			"value": "Too many arguments"
+		},
+		{
+			"label": "ERROR_TITLE_COMMAND_ARGUMENTS_TOO_MANY",
+			"language": "GERMAN",
+			"value": "Zu viele Argumente"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_ARGUMENTS_TOO_MANY",
+			"language": "ENGLISH",
+			"value": "The command `€0` does not accept more than €1 arguments."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_ARGUMENTS_TOO_MANY",
+			"language": "GERMAN",
+			"value": "Der Befehl `€0` akzeptiert nicht mehr als €1 Argumente."
+		},
+
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_ARGUMENTS_TOO_MANY",
+			"language": "ENGLISH",
+			"value": "Too many arguments"
+		},
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_ARGUMENTS_TOO_MANY",
+			"language": "GERMAN",
+			"value": "Zu viele Argumente"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_ARGUMENTS_TOO_MANY",
+			"language": "ENGLISH",
+			"value": "The subcommand `€0` of command `€1` does not accept more than €2 arguments."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_ARGUMENTS_TOO_MANY",
+			"language": "GERMAN",
+			"value": "Der Unterbefehl `€0` des Befehls `€1` akzeptiert nicht mehr als €2 Argumente."
+		},
+
+		{
+			"label": "ERROR_TITLE_COMMAND_UNKNOWN_ARGUMENT",
+			"language": "ENGLISH",
+			"value": "Unknown argument"
+		},
+		{
+			"label": "ERROR_TITLE_COMMAND_UNKNOWN_ARGUMENT",
+			"language": "GERMAN",
+			"value": "Unbekanntes Argument"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_UNKNOWN_ARGUMENT",
+			"language": "ENGLISH",
+			"value": "The argument `€0` does not exist for command `€1`."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_UNKNOWN_ARGUMENT",
+			"language": "GERMAN",
+			"value": "Das Argument `€0` existiert für den Befehl `€1` nicht."
+		},
+
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_UNKNOWN_ARGUMENT",
+			"language": "ENGLISH",
+			"value": "Unknown argument"
+		},
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_UNKNOWN_ARGUMENT",
+			"language": "GERMAN",
+			"value": "Unbekanntes Argument"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_UNKNOWN_ARGUMENT",
+			"language": "ENGLISH",
+			"value": "The argument `€0` does not exist for subcommand `€1` of command `€2`."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_UNKNOWN_ARGUMENT",
+			"language": "GERMAN",
+			"value": "Das Argument `€0` existiert für den Unterbefehl `€1` des Befehls `€2` nicht."
+		},
+
+		{
+			"label": "ERROR_TITLE_COMMAND_DUPLICATE_ARGUMENT",
+			"language": "ENGLISH",
+			"value": "Argument defined multiple times"
+		},
+		{
+			"label": "ERROR_TITLE_COMMAND_DUPLICATE_ARGUMENT",
+			"language": "GERMAN",
+			"value": "Argument mehrfach definiert"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_DUPLICATE_ARGUMENT",
+			"language": "ENGLISH",
+			"value": "The argument `€0` is defined multiple times for command `€1`."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_DUPLICATE_ARGUMENT",
+			"language": "GERMAN",
+			"value": "Das Argument `€0` ist für den Befehl `€1` mehrfach definiert."
+		},
+
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_DUPLICATE_ARGUMENT",
+			"language": "ENGLISH",
+			"value": "Argument defined multiple times"
+		},
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_DUPLICATE_ARGUMENT",
+			"language": "GERMAN",
+			"value": "Argument mehrfach definiert"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_DUPLICATE_ARGUMENT",
+			"language": "ENGLISH",
+			"value": "The argument `€0` is defined multiple times for subcommand `€1` of command `€2`."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_DUPLICATE_ARGUMENT",
+			"language": "GERMAN",
+			"value": "Das Argument `€0` ist für den Unterbefehl `€1` des Befehls `€2` mehrfach definiert."
+		},
+
+		{
+			"label": "ERROR_TITLE_COMMAND_REQUIRED_ARGUMENT_MISSING",
+			"language": "ENGLISH",
+			"value": "Required argument missing"
+		},
+		{
+			"label": "ERROR_TITLE_COMMAND_REQUIRED_ARGUMENT_MISSING",
+			"language": "GERMAN",
+			"value": "Erforderliches Argument fehlt"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_REQUIRED_ARGUMENT_MISSING",
+			"language": "ENGLISH",
+			"value": "The argument `€0` is required for command `€1`."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_REQUIRED_ARGUMENT_MISSING",
+			"language": "GERMAN",
+			"value": "Das Argument `€0` ist für den Befehl `€1` erforderlich."
+		},
+
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_REQUIRED_ARGUMENT_MISSING",
+			"language": "ENGLISH",
+			"value": "Required argument missing"
+		},
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_REQUIRED_ARGUMENT_MISSING",
+			"language": "GERMAN",
+			"value": "Erforderliches Argument fehlt"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_REQUIRED_ARGUMENT_MISSING",
+			"language": "ENGLISH",
+			"value": "The argument `€0` is required for subcommand `€1` of command `€2`."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_REQUIRED_ARGUMENT_MISSING",
+			"language": "GERMAN",
+			"value": "Das Argument `€0` ist für den Unterbefehl `€1` des Befehls `€2` erforderlich."
+		},
+
+		{
+			"label": "ERROR_TITLE_COMMAND_ARGUMENT_INVALID_TYPE",
+			"language": "ENGLISH",
+			"value": "Invalid argument type"
+		},
+		{
+			"label": "ERROR_TITLE_COMMAND_ARGUMENT_INVALID_TYPE",
+			"language": "GERMAN",
+			"value": "Ungültiger Argumenttyp"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_ARGUMENT_INVALID_TYPE",
+			"language": "ENGLISH",
+			"value": "The argument `€0` of command `€1` must be of type [`€2`](https://discord.com/channels/€3/€4 \"€5\")."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_COMMAND_ARGUMENT_INVALID_TYPE",
+			"language": "GERMAN",
+			"value": "Das Argument `€0` des Befehls `€1` muss vom Typ [`€2`](https://discord.com/channels/€3/€4 \"€5\") sein."
+		},
+
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_ARGUMENT_INVALID_TYPE",
+			"language": "ENGLISH",
+			"value": "Invalid argument type"
+		},
+		{
+			"label": "ERROR_TITLE_SUBCOMMAND_ARGUMENT_INVALID_TYPE",
+			"language": "GERMAN",
+			"value": "Ungültiger Argumenttyp"
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_ARGUMENT_INVALID_TYPE",
+			"language": "ENGLISH",
+			"value": "The argument `€0` of subcommand `€1` of command `€2` must be of type [`€3`](https://discord.com/channels/€4/€5 \"€6\")`."
+		},
+		{
+			"label": "ERROR_DESCRIPTION_SUBCOMMAND_ARGUMENT_INVALID_TYPE",
+			"language": "GERMAN",
+			"value": "Das Argument `€0` des Unterbefehls `€1` des Befehls `€2` muss vom Typ [`€3`](https://discord.com/channels/€4/€5 \"€6\") sein."
+		},
+
 
 		{
 			"label": "COMMAND_DESCRIPTION_LIST",
@@ -703,6 +943,7 @@
 			"language": "GERMAN",
 			"value": "Der Befehl list ist paginiert. Dieser Argument gibt an, welche Seite angezeigt werden soll."
 		},
+
 		{
 			"label": "COMMAND_DESCRIPTION_HELP",
 			"language": "ENGLISH",
@@ -754,6 +995,7 @@
 			"language": "GERMAN",
 			"value": "Die Sprache der Willkommensnachricht, die aktualisiert werden soll."
 		},
+
 		{
 			"label": "COMMAND_DESCRIPTION_REFRESH_RULES",
 			"language": "ENGLISH",
@@ -773,6 +1015,70 @@
 			"label": "COMMAND_ARG_DESCRIPTION_REFRESH_RULES_LANGUAGE",
 			"language": "GERMAN",
 			"value": "Die Sprache der Regeln, die aktualisiert werden soll."
+		},
+
+
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_INTEGER",
+			"language": "ENGLISH",
+			"value": "Integer"
+		},
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_INTEGER",
+			"language": "GERMAN",
+			"value": "Integer"
+		},
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_INTEGER_TOOLTIP",
+			"language": "ENGLISH",
+			"value": "A whole number (e.g. -2, -1, 0, 1, 2, ...)."
+		},
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_INTEGER_TOOLTIP",
+			"language": "GERMAN",
+			"value": "Eine ganze Zahl (z.B. -2, -1, 0, 1, 2, ...)."
+		},
+
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_STRING",
+			"language": "ENGLISH",
+			"value": "String"
+		},
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_STRING",
+			"language": "GERMAN",
+			"value": "String"
+		},
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_STRING_TOOLTIP",
+			"language": "ENGLISH",
+			"value": "A text (e.g. \"Hello World!\")."
+		},
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_STRING_TOOLTIP",
+			"language": "GERMAN",
+			"value": "Ein Text (z.B. \"Hallo Welt!\")."
+		},
+
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_CHOICE",
+			"language": "ENGLISH",
+			"value": "Choice"
+		},
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_CHOICE",
+			"language": "GERMAN",
+			"value": "Auswahl"
+		},
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_CHOICE_TOOLTIP",
+			"language": "ENGLISH",
+			"value": "A choice from a list of options. Run \"!help command <command>\" to see the available options."
+		},
+		{
+			"label": "COMMAND_ARGUMENT_TYPE_CHOICE_TOOLTIP",
+			"language": "GERMAN",
+			"value": "Eine Auswahl aus einer Liste von Optionen. Führe \"!help command <command>\" aus, um die verfügbaren Optionen zu sehen."
 		}
 	],
 	"commands": [
@@ -794,7 +1100,7 @@
 					"data": {
 						"min": 1,
 						"max": 100,
-						"default": 1
+						"default": "1"
 					}
 				}
 			],
