--- a/src/main/resources/StringsResources.properties
+++ b/src/main/resources/StringsResources.properties
@@ -86,6 +86,6 @@ command.arguments.type.string=String
 command.arguments.type.string.tooltip=A text (e.g. "Hello World!").
 
 command.arguments.type.choice=Choice
-command.arguments.type.choice.tooltip=A choice from a list of options. Run "!help command $0" to see the available options."
+command.arguments.type.choice.tooltip=A choice from a list of options. Run "!help command $0" to see the available options.
 
 # ---------------
