--- a/data/bot_config.json
+++ b/data/bot_config.json
@@ -520,12 +520,12 @@
 				"definitions": [],
 				"required": false
 			},
-			"description": "$COMMAND_DESCRIPTION_LIST",
+			"description": "$commands.list.description",
 			"arguments": [
 				{
 					"name": "page",
 					"type": "INTEGER",
-					"description": "$COMMAND_ARG_DESCRIPTION_LIST_PAGE",
+					"description": "$commands.list.argument.page.description",
 					"required": false,
 					"data": {
 						"min": 1,
@@ -564,12 +564,12 @@
 					{
 						"name": "command",
 						"available": true,
-						"description": "$SUBCOMMAND_DESCRIPTION_COMMAND_HELP",
+						"description": "$commands.help.subcommand.command.description",
 						"arguments": [
 							{
 								"name": "command",
 								"type": "STRING",
-								"description": "$SUBCOMMAND_ARG_DESCRIPTION_COMMAND_HELP_COMMAND",
+								"description": "$commands.help.subcommand.command.argument.command.description",
 								"required": true,
 								"data": {
 									"min_length": 2,
@@ -593,7 +593,7 @@
 				],
 				"required": true
 			},
-			"description": "$COMMAND_DESCRIPTION_HELP",
+			"description": "$commands.help.description",
 			"arguments": [],
 			"permissions": [
 				{
@@ -624,12 +624,12 @@
 				"definitions": [],
 				"required": false
 			},
-			"description": "$COMMAND_DESCRIPTION_REFRESH_WELCOME",
+			"description": "$commands.refresh_welcome.description",
 			"arguments": [
 				{
 					"name": "language",
 					"type": "CHOICE",
-					"description": "$COMMAND_ARG_DESCRIPTION_REFRESH_WELCOME_LANGUAGE",
+					"description": "$commands.refresh_welcome.argument.language.description",
 					"required": false,
 					"data": {
 						"choices": [
@@ -674,12 +674,12 @@
 				"definitions": [],
 				"required": false
 			},
-			"description": "$COMMAND_DESCRIPTION_REFRESH_RULES",
+			"description": "$commands.refresh_rules.description",
 			"arguments": [
 				{
 					"name": "language",
 					"type": "CHOICE",
-					"description": "$COMMAND_ARG_DESCRIPTION_REFRESH_RULES_LANGUAGE",
+					"description": "$commands.refresh_rules.argument.language.description",
 					"required": false,
 					"data": {
 						"choices": [
