Added support for exceptions on error when parsing command arguments

--- a/src/main/resources/StringsResources.properties
+++ b/src/main/resources/StringsResources.properties
@@ -52,11 +52,12 @@ errors.command_required_argument_missing.description=The argument `$0` is requir
 errors.subcommand_required_argument_missing.title=Required argument missing
 errors.subcommand_required_argument_missing.description=The argument `$0` is required for subcommand `$1` of command `$2`.
 
-errors.command_argument_invalid_type.title=Invalid argument type
-errors.command_argument_invalid_type.description=The argument `$0` of command `$1` must be of type [`$2`](https://discord.com/channels/$3/$4 "$5").
-
-errors.subcommand_argument_invalid_type.title=Invalid argument type
-errors.subcommand_argument_invalid_type.description=The argument `$0` of subcommand `$1` of command `$2` must be of type [`$3`](https://discord.com/channels/$4/$5 "$6").
+errors.command_argument_parsing_report.fields.title=Argument `$0`
+errors.command_argument_parsing_report.fields.reason.invalid_type=The argument `$0` must be of type `[$1](https://discordapp.com/channels/$2/$3 "$4")`.
+errors.command_argument_parsing_report.fields.reason.integer.too_small=The argument `$0` must be greater than or equal to `$1`.
+errors.command_argument_parsing_report.fields.reason.integer.too_big=The argument `$0` must be less than or equal to `$1`.
+errors.command_argument_parsing_report.fields.reason.string.too_short=The argument `$0` must be at least `$1` characters long.
+errors.command_argument_parsing_report.fields.reason.string.too_long=The argument `$0` must be at most `$1` characters long.
 
 # ---------------
 
