Refactored the data validation a bit and added choice validation

--- a/src/main/resources/StringsResources.properties
+++ b/src/main/resources/StringsResources.properties
@@ -59,6 +59,7 @@ errors.command_argument_parsing_report.fields.reason.integer.too_small=This argu
 errors.command_argument_parsing_report.fields.reason.integer.too_big=This argument must be less than or equal to `$0`.
 errors.command_argument_parsing_report.fields.reason.string.too_short=This argument must be at least `$0` characters long.
 errors.command_argument_parsing_report.fields.reason.string.too_long=This argument must be at most `$0` characters long.
+errors.command_argument_parsing_report.fields.reason.choice.invalid_option=This argument is a [`$0`](https://discordapp.com/channels/$1/$2 "$3") and must be one of the following options:\n$4
 
 # ---------------
 
