Made so that null choices are an option when choice is not required and added specification of language for refreshing welcome messages

--- a/data/bot_config.json
+++ b/data/bot_config.json
@@ -711,7 +711,7 @@
 									"en"
 								],
 								"case_sensitive": false,
-								"value": "ENGLISH"
+								"value": "en"
 							},
 							{
 								"names": [
@@ -719,7 +719,7 @@
 									"de"
 								],
 								"case_sensitive": false,
-								"value": "GERMAN"
+								"value": "de"
 							}
 						],
 						"choice_exclusive": true,
@@ -762,7 +762,7 @@
 									"englisch"
 								],
 								"case_sensitive": true,
-								"value": "ENGLISH"
+								"value": "en"
 							},
 							{
 								"names": [
@@ -771,7 +771,7 @@
 									"deutsch"
 								],
 								"case_sensitive": true,
-								"value": "GERMAN"
+								"value": "de"
 							}
 						],
 						"choice_exclusive": true
