Added improved error messages for giving too many arguments and removed some clutter from them

--- a/data/bot_config.json
+++ b/data/bot_config.json
@@ -8,7 +8,7 @@
 				"embeds": [
 					{
 						"author": {
-							"name": "Error Message ︱ ACSP - Official Bot",
+							"name": "Error Message",
 							"url": null,
 							"icon_url": "https://cdn-icons-png.flaticon.com/512/2569/2569174.png"
 						},
@@ -36,7 +36,7 @@
 				"embeds": [
 					{
 						"author": {
-							"name": "Fehlermeldung ︱ ACSP - Official Bot",
+							"name": "Fehlermeldung",
 							"url": null,
 							"icon_url": "https://cdn-icons-png.flaticon.com/512/2569/2569174.png"
 						},
@@ -65,7 +65,7 @@
 				"embeds": [
 					{
 						"author": {
-							"name": "Error Message ︱ ACSP - Official Bot",
+							"name": "Error Message",
 							"url": null,
 							"icon_url": "https://cdn-icons-png.flaticon.com/512/2569/2569174.png"
 						},
@@ -93,7 +93,7 @@
 				"embeds": [
 					{
 						"author": {
-							"name": "Fehlermeldung ︱ ACSP - Official Bot",
+							"name": "Fehlermeldung",
 							"url": null,
 							"icon_url": "https://cdn-icons-png.flaticon.com/512/2569/2569174.png"
 						},
