--- a/src/main/resources/StringsResources.properties
+++ b/src/main/resources/StringsResources.properties
@@ -29,10 +29,14 @@ errors.command_arguments_invalid_order.title=Invalid argument order
 errors.command_arguments_invalid_order.description=Arguments given as a key-value pair must either be given exclusively or at the end of each argument list.
 
 errors.command_arguments_too_many.title=Too many arguments
-errors.command_arguments_too_many.description=The command `$0` does not accept more than $1 arguments.
+errors.command_arguments_too_many.description=The command `$0` does not accept more than $1 argument(s).
+errors.command_arguments_too_many_none.title=Too many arguments
+errors.command_arguments_too_many_none.description=The command `$0` does not accept any argument(s).
 
 errors.subcommand_arguments_too_many.title=Too many arguments
-errors.subcommand_arguments_too_many.description=The subcommand `$0` of command `$1` does not accept more than $2 arguments.
+errors.subcommand_arguments_too_many.description=The subcommand `$0` of command `$1` does not accept more than $2 argument(s).
+errors.subcommand_arguments_too_many_none.title=Too many arguments
+errors.subcommand_arguments_too_many_none.description=The subcommand `$0` of command `$1` does not accept any argument(s).
 
 errors.command_unknown_argument.title=Unknown argument
 errors.command_unknown_argument.description=The argument `$0` does not exist for command `$1`.
