Added support for a MongoDB database on localhost. Removed all the welcome and rules functionality but left the messages inside the bot config and the support for localized messages in the bot data also, because they are old and unnecessary for now.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,9 @@ application:
   translation:
     baseName: StringsResources
     defaultLocale: en
+spring:
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: acsp_bot
